memory usage is higher after rendering with cycles #52135

Closed
opened 2017-07-20 19:20:51 +02:00 by mathieu menuet · 11 comments

System Information
Windows 7 x64

Blender Version
Broken: 2.79 testbuild 2

Short description of error
After rendering a scene with cycles and a lot of textures, memory usage is higher than before rendering. If the file is saved after rendering, Blender will take as much memory on opening the file than after rendering (in attached file, 2.2GB of memory for a cube vs 109MB before rendering.

Exact steps for others to reproduce the error
in the default scene, switch to cycles and append the cube from this file: memory leak cycles v2.blend.
It uses 109MB memory. Hit F12, now it uses 2.2GB.
It looks like the persistent data option has been activated and the textures are cached, also the option is deactivated.

**System Information** Windows 7 x64 **Blender Version** Broken: 2.79 testbuild 2 **Short description of error** After rendering a scene with cycles and a lot of textures, memory usage is higher than before rendering. If the file is saved after rendering, Blender will take as much memory on opening the file than after rendering (in attached file, 2.2GB of memory for a cube vs 109MB before rendering. **Exact steps for others to reproduce the error** in the default scene, switch to cycles and append the cube from this file: [memory leak cycles v2.blend](https://archive.blender.org/developer/F673414/memory_leak_cycles_v2.blend). It uses 109MB memory. Hit F12, now it uses 2.2GB. It looks like the persistent data option has been activated and the textures are cached, also the option is deactivated.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli

Added subscriber: @brecht

Added subscriber: @brecht

This .blend file is using generated images as textures. When Cycles renders generated / packed images, Blender will create / load the image buffers and keep them around in memory. For regular images on disk this is not a problem.

This .blend file is using generated images as textures. When Cycles renders generated / packed images, Blender will create / load the image buffers and keep them around in memory. For regular images on disk this is not a problem.
Author

ok, then it's not a bug, but wouldn't it make sens to only have this behavior when "persistent data" is checked and free it otherwise?

ok, then it's not a bug, but wouldn't it make sens to only have this behavior when "persistent data" is checked and free it otherwise?
Author

another thing is, when I render on 2 GPUs a scene that takes more than dedicated memory, the system memory will be used. If those generated textures are kept around, we have 3 times the textures. The cache Blender silently creates and the 2 versions created by the OpenCL driver. As the time needed to initialize rendering is not much faster the second time compared to using the cache, but many GB memory are away, making it more certain that swapping will be triggered, the cache may greatly slow down render for a benefit which is pretty low, at least in my tests.

Edit: so to sum it up, I would better see persistent data patch https://developer.blender.org/D2613 from @LukasStockner committed and have the cache only when user request so. It would respect Blender's philosophy of not thinking for the user.

another thing is, when I render on 2 GPUs a scene that takes more than dedicated memory, the system memory will be used. If those generated textures are kept around, we have 3 times the textures. The cache Blender silently creates and the 2 versions created by the OpenCL driver. As the time needed to initialize rendering is not much faster the second time compared to using the cache, but many GB memory are away, making it more certain that swapping will be triggered, the cache may greatly slow down render for a benefit which is pretty low, at least in my tests. Edit: so to sum it up, I would better see persistent data patch https://developer.blender.org/D2613 from @LukasStockner committed and have the cache only when user request so. It would respect Blender's philosophy of not thinking for the user.
Author

Added subscriber: @LukasStockner

Added subscriber: @LukasStockner

This issue was referenced by blender/cycles@51a8162a7b

This issue was referenced by blender/cycles@51a8162a7b06b8aefc1e309f084bc12925d3a949

This issue was referenced by 2b132fc3f7

This issue was referenced by 2b132fc3f73db788d7936ef59cd2961f789ebc4d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed now. D2613 only affects Cycles side persistent data, so would not have made any difference here.

Fixed now. [D2613](https://archive.blender.org/developer/D2613) only affects Cycles side persistent data, so would not have made any difference here.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52135
No description provided.