Fix T52135: Cycles should not keep generated/packed images in memory after render.